<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fullview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/VersionOS"
            app:layout_constraintEnd_toStartOf="@+id/et_marque"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/mod_le"
            app:layout_constraintEnd_toStartOf="@+id/et_modele"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/et_marque"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Os_Version"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/et_modele" />

        <EditText
            android:id="@+id/et_battery"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/BatteryLevel"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/get_button"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:onClick="backGround"
            android:text="@string/BackGround"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_marque" />

        <TextView
            android:id="@+id/tv_battery"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/battery_level"
            app:layout_constraintEnd_toStartOf="@+id/et_battery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/address_mac"
            app:layout_constraintEnd_toStartOf="@+id/et_battery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_battery" />

        <EditText
            android:id="@+id/et_AdrMac"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/AdresseMac"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.789"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_battery" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:layout_marginTop="24dp"
            android:text="@string/memory"
            app:layout_constraintEnd_toStartOf="@+id/et_battery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/et_memory"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Memory"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.878"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/et_AdrMac" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="19dp"
            android:layout_marginTop="36dp"
            android:text="@string/latitude"
            app:layout_constraintEnd_toStartOf="@+id/et_memory"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/longitude"
            app:layout_constraintEnd_toStartOf="@+id/et_Longitude"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/et_Latitude"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Latitude"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/et_memory" />

        <EditText
            android:id="@+id/et_Longitude"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Longitude"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.881"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/et_Latitude" />

        <Button
            android:id="@+id/btLocation"
            android:layout_width="150dp"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:text="@string/localiser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/get_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/imei"
            app:layout_constraintEnd_toStartOf="@+id/et_IMEI"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/et_IMEI"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/CODEIMEI"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/et_Longitude" />

        <EditText
            android:id="@+id/et_fabriquant"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Fabriquant"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.852"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/et_IMEI" />

        <EditText
            android:id="@+id/et_modele"
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Modéle"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.854"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/et_fabriquant" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fabriquant"
            app:layout_constraintEnd_toStartOf="@+id/et_fabriquant"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>